# xmc1000

xmc1000/: Cargo.toml  device.x
xmc1000-hal/: Cargo.toml
xmc1000-hal/src/: gpio.rs  lib.rs  prelude.rs  scu.rs
xmc1000/src/: lib.rs
xmc1000/src/bccu0/: mod.rs
xmc1000/src/bccu0/chen/: mod.rs
xmc1000/src/bccu0/chocon/: mod.rs
xmc1000/src/bccu0/chstrcon/: mod.rs
xmc1000/src/bccu0/chtrig/: mod.rs
xmc1000/src/bccu0/deen/: mod.rs
xmc1000/src/bccu0/destrcon/: mod.rs
xmc1000/src/bccu0/evfcr/: mod.rs
xmc1000/src/bccu0/evfr/: mod.rs
xmc1000/src/bccu0/evfsr/: mod.rs
xmc1000/src/bccu0/evier/: mod.rs
xmc1000/src/bccu0/globclk/: mod.rs
xmc1000/src/bccu0/globcon/: mod.rs
xmc1000/src/bccu0/globdim/: mod.rs
xmc1000/src/bccu0/id/: mod.rs
xmc1000/src/bccu0/ltchol/: mod.rs
xmc1000/src/bccu0_ch0/: mod.rs
xmc1000/src/bccu0_ch0/chconfig/: mod.rs
xmc1000/src/bccu0_ch0/int/: mod.rs
xmc1000/src/bccu0_ch0/ints/: mod.rs
xmc1000/src/bccu0_ch0/pkcmp/: mod.rs
xmc1000/src/bccu0_ch0/pkcntr/: mod.rs
xmc1000/src/bccu0_de0/: mod.rs
xmc1000/src/bccu0_de0/dl/: mod.rs
xmc1000/src/bccu0_de0/dls/: mod.rs
xmc1000/src/bccu0_de0/dtt/: mod.rs
xmc1000/src/ccu80/gcst/: mod.rs
xmc1000/src/ccu80/gctrl/: mod.rs
xmc1000/src/ccu80/gpchk/: mod.rs
xmc1000/src/ccu80/gstat/: mod.rs
xmc1000/src/ccu80_cc80/chc/: mod.rs
xmc1000/src/ccu80_cc80/cr1/: mod.rs
xmc1000/src/comparator/: mod.rs
xmc1000/src/math/: mod.rs
xmc1000/src/pau/: mod.rs
xmc1000/src/posif0/: mod.rs
xmc1000/src/shs0/: mod.rs
xmc1000/src/vadc/: mod.rs
xmc1000/src/vadc_g0/: mod.rs
(+129 files in other folders)
