[package]
authors = ["Ben Harris <mail@bharr.is>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F30x family of microcontrollers"
keywords = ["arm", "cortex-m", "xmc1000", "hal", "embedded-hal", "embedded-hal-impl"]
name = "xmc1000-hal"
repository = "https://github.com/m9s/xmc1000"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.0"
embedded-hal = "0.2.0"
nb = "0.1.0"
xmc1000 = { path = "../xmc1000" }

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[features]
rt = ["xmc1000/rt"]
